--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,27 +1,29 @@
 html,
 body {
-  height: 100%;
+    font-family: Arial, sans-serif;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    background-color: #f5f5f5 !important;
 }
 
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  align-items: center;
-  background-color: #f5f5f5 !important;
-}
+
 
 /*Log In*/
 .top-bar{
   height:4em; 
   background-color: #FBD374;
-  width: 100%; 
   display: flex;
   align-items: center;
 }
 .top-bar img {
   margin-right: 10px; 
 }
+.contenedor-login{
+  margin-top: 7em;
+}
+
 .form-signin {
   width: 100%;
   height: 30em;
@@ -31,23 +33,10 @@ body {
   border-radius: 0.5em;
 }
 
-.form-signin .form-floating:focus-within {
-  z-index: 2;
-}
-.form-control.custom-input {
-  height: 3em; 
-}
-
-.form-signin input[type="text"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-.form-signin input[type="password"] {
-  margin-bottom: 5px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+.input-login{
+  height: 3em !important;
+  border-radius: 0.5em;
+  border: none;
 }
 
 .txt-login{
@@ -59,6 +48,8 @@ body {
   background-color: #FBD374;
   color: #696969;
   border-radius: 1em;
+  border: none;
+
 }
 .perfil-container {
   display: flex;
@@ -77,56 +68,24 @@ body {
 
 /*Home*/
 
-.menu {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.menu-item {
-  flex: 1;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin: 10px;
-  padding: 10px;
-  text-align: center;
-  transition: transform 0.2s ease-in-out;
-  cursor: pointer;
-}
-
-.menu-item:hover {
-  transform: translateY(-5px);
-}
-
-.menu-item img {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.menu-item h3 {
-  margin-top: 10px;
-  font-size: 1.2rem;
-}
 .navbar {
   background-color: #7ea56a;
 }
 
-.navbar a {
-  float: left;
-  display: block;
-  color: rgb(193, 7, 7);
-  text-align: center;
-  padding: 14px 16px;
+.text-navbar{
+  color: #f5f5f5;
   text-decoration: none;
+  margin-left: auto !important;
 }
-
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
+.link-home {
+  text-decoration: none;
+  color: #333333;
+  margin-left: auto;
 }
-
+.link-home:hover {
+  color: #333333 ;
+  font-size: 1em;
+}
 .navbar img {
   float: left;
   margin-right: 10px;
@@ -147,6 +106,14 @@ body {
   text-align: left; /* Alinea los elementos de la lista hacia la izquierda */
 }
 
+/*TABS*/
+.nav-link{
+  text-decoration: none;
+  color: #333333 !important;
+  font: 1em;
+  font-weight: 400;
+}
+
 /*Alta de alumnos*/
 
 .form-label-alta{
@@ -158,9 +125,6 @@ body {
   color: red;
 }
 
-th.title {
-  text-align: center;
-}
 
 .table-container {
   overflow-x: auto;
@@ -170,4 +134,23 @@ th.title {
 /* Establece el ancho del desplegable al 100% del contenedor */
 .custom-select {
   width: 100%;
+}
+.btn-operacion{
+  padding: 0.4em;
+  background-color: #FBD374;
+  color: white;
+  border-radius: 1em;
+  cursor: pointer;
+}
+.col-tabla{
+  font-weight: 500;
+  text-align: center;
+}
+.btn-guardar{
+  background-color: #FBD374;
+  color: white;
+  border:none;
+  border-radius: 1em;
+  padding: 0.5em;
+  font-weight: 400;
 }
