--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,7 +4,10 @@
     <title>{% block title %}Título predeterminado{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="icon" href="/static/img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -12,34 +15,37 @@
             <div class="container-fluid">
                 <div class="navbar">
                     <a href="{{ url_for('inicio') }}">
-                        <img src="/static/img/logo.png" alt="Logo" style="width: 6em;">
+                        <img src="/static/img/logo.png" alt="Logo" >
                     </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              </div>
+                    <a class="text-navbar ml-auto" href="{{ url_for('logout') }}">Cerrar Sesión</a>           
+                </div>
             </div>
-          </nav>
+        </nav>
     <main>
          
-    <ul class="nav justify-content-center mb-5">
+    <ul class="nav justify-content-center mt-5 mb-3 ">
         <li class="nav-item">
             <a class="nav-link" href="{{url_for('alta')}}">
-                <img src="static/img/Matricula.jpeg" style="width: 1em; margin-right: 5px;">
+                <img src="static/img/Matricula.jpeg" style="width: 1.8em; margin-right: 5px;">
                 Nuevo alumno
             </a> 
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{url_for('ingresos')}}">
-                <img src="static/img/Ingresos.jpeg" style="width: 1em; margin-right: 5px;">
+                <img src="static/img/Ingresos.jpeg" style="width: 1.8em; margin-right: 5px;">
                 Ingresos
             </a> 
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{url_for('egresos')}}">
-                <img src="static/img/Egresos.jpeg" style="width: 1em; margin-right: 5px;">
+                <img src="static/img/Egresos.jpeg" style="width: 1.8em; margin-right: 5px;">
                 Egresos
+            </a> 
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('recibo')}}">
+                <img src="static/img/Egresos.jpeg" style="width: 1em; margin-right: 5px;">
+                recibo
             </a> 
         </li>
       </ul>
