--- a/src/templates/egresos.html
+++ b/src/templates/egresos.html
@@ -8,8 +8,8 @@
     <div class="row">
         
         <div class="col-md-10 container">
+        <p class="text-left"> Egresos</p>
         <div class="card"> 
-            <p class="text-left"> Egresos</p>
             <div class = "card-body">
                 <form action="{{ url_for('egresos')}}" method="POST">
                     <div class="row mb-3">
@@ -34,7 +34,7 @@
                             </select>
                         </div>
                         <div class="col-md-3">
-                            <button class="btn btn-primary mb-3 mt-4" type="submit">Guardar</button>
+                            <button class="btn-guardar mb-3 mt-4" type="submit">Guardar</button>
                         </div>
                     </div>
                 </div>
@@ -54,12 +54,14 @@
                 <div class="table-container">
                     <table class="table table-bordered">
                     <thead>
+                        
                         <th class="title" scope="col">#</th>
                         <th class="title" scope="col">Nombre del servicio o gasto</th>
                         <th class="title" scope="col">Fecha de pago</th>
                         <th class="title" scope="col">Monto</th>
                         <th class="title" scope="col">Medio de pago</th>
                         <th class="title" scope="col"colspan="2">Acciones</th>
+
                     </thead>
                 </div>
                     <tbody>
@@ -70,12 +72,9 @@
                             <td>{{ d.fecha_pago }}</td>
                             <td>{{ d.monto }}</td>
                             <td>{{ d.medios_de_pago }}</td>
-                            <td>
-                                <button class="btn btn-primary btn-sm" id="btn-editar{{ d.id }}" data-bs-toggle="modal" data-bs-target="#modal{{ d.id }}">Editar</button>
-                            </td>
-                            <td>
-                                <a href="{{ url_for('eliminar_egresos', id=d.id) }}" class="btn btn-danger btn-sm">Eliminar</a>
-                            </td>
+                            <td class="text-center "> <i class="btn-operacion bi bi-pencil-square " id="btn-editar{{ d.id }}" data-bs-toggle="modal" data-bs-target="#modal{{ d.id }}"></i></td>
+                            <td class="text-center"> <a href="{{ url_for('eliminar_egresos', id=d.id) }}" ><i class="btn-operacion bi bi-trash"></i></a></td>
+                          
                         </tr>
 
                         <!-- MODAL -->
@@ -103,7 +102,7 @@
                                                     {% endfor %}
                                                 </select>
                                             <div class="modal-footer">
-                                                <button type="submit" class="btn btn-primary">Guardar cambios</button>
+                                                <button type="submit" class="btn-guardar">Guardar cambios</button>
                                     </div>
                                 </form>
                             </div>
